--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>The_stopwatch</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
-<script type="text/javascript" src="./main.js"></script>
+  <article class="stopwatch">
+    <div class="minute-hand"></div>
+    <div class="second-hand"></div>
+    <div class="circle"></div>
+  </article>
 </body>
 </html>
