--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <article class="stopwatch">
-    <div class="minute-hand"></div>
-    <div class="second-hand"></div>
-    <div class="circle"></div>
+  <main>
+    <article class="stopwatch">
+      <div class="minute-hand"></div>
+      <div class="second-hand"></div>
+      <div class="circle"></div>
   </article>
+  </main>
 </body>
 </html>
